--- a/platforms/android/app/src/main/assets/www/css/index.css
+++ b/platforms/android/app/src/main/assets/www/css/index.css
@@ -1,4 +1,4 @@
-/*
+    /*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -16,24 +16,33 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
-.start {
-    background-color: yellowgreen;
-}
-
-.touchStart {
-    background-color: aqua;
-}
-
-.touching {
-    background-color: aquamarine;
-}
-
-.touchEnd {
-    background-color: red;
-}
-
-#sentence {
-    text-align: center;
-    font-size: 10vw;
-}
+    
+    .start {
+        background-color: yellowgreen;
+    }
+    
+    .touchStart {
+        background-color: aqua;
+    }
+    
+    .touching {
+        background-color: aquamarine;
+    }
+    
+    .touchEnd {
+        background-color: red;
+    }
+    
+    #sentence {
+        text-align: center;
+        font-size: 10vw;
+    }
+    
+    #toucharea {
+        border: solid 2px;
+        text-align: center;
+    }
+    
+    .result {
+        background-color: azure;
+    }
